--- a/XCare.DMS.Test/App.config
+++ b/XCare.DMS.Test/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key ="XCareHisConnectionString" value="Data Source=.\SQL2K8R2;Initial Catalog=XCare_His;Persist Security Info=True;User ID=sa;Password=123"/>
+    <add key ="XCareHisConnectionString" value="Data Source=.\SQL2K8R2;Initial Catalog=XCare_His;Persist Security Info=True;User ID=sa;Password=123;Application Name=xcare"/>
   </appSettings>
 </configuration>
