add daemon module

--- a/XCare.DMS.DataProc.Event/XCare.DMS.DataProc.Event.csproj
+++ b/XCare.DMS.DataProc.Event/XCare.DMS.DataProc.Event.csproj
@@ -39,7 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataCreatedEvent.cs" />
+    <Compile Include="DataDeletedEvent.cs" />
+    <Compile Include="DataIllegalCreatedEvent.cs" />
+    <Compile Include="DataIllegalDeletedEvent.cs" />
+    <Compile Include="DataIllegalUpdatedEvent.cs" />
+    <Compile Include="DataUpdatedEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
