--- a/XCare.DMS.DataProc.Host/App.config
+++ b/XCare.DMS.DataProc.Host/App.config
@@ -1,6 +1,67 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
+    <!--<section name="quartz"
+             type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />-->
+  </configSections>
+
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="log.txt" />
+      <param name="AppendToFile" value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%-5p%d{yyyy-MM-dd hh:mm:ss} – %m%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
+
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Log4Net.Universal.Log4NetFactoryAdapter, Common.Logging.Log4Net.Universal">
+        <arg key="configType" value="INLINE" />
+        <arg key="configFile" value="Trace/application.log.txt" />
+        <arg key="level" value="ALL" />
+      </factoryAdapter>
+    </logging>
+  </common>
+
+  <!--<quartz>
+    <add key="quartz.scheduler.instanceName" value="DaemonQuartzScheduler" />
+    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
+    <add key="quartz.threadPool.threadCount" value="10" />
+    <add key="quartz.threadPool.threadPriority" value="1" />
+    <add key="quartz.plugin.xml.type" value="Quartz.Plugin.Xml.JobInitializationPlugin, Quartz" />
+    <add key="quartz.plugin.xml.fileNames" value="~/quartz_jobs.xml" />
+    <add key="quartz.jobStore.misfireThreshold" value="60000" />
+    <add key="quartz.jobStore.type" value="Quartz.Simpl.RAMJobStore, Quartz" />
+  </quartz>-->
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+
+  <connectionStrings>
+    <add name="XCareConnectionString"
+         connectionString="Data Source=.\SQL2K8R2;Initial Catalog=XCare;Integrated Security = SSPI;Application Name=xcare" />
+  </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
