--- a/XCare.DMS.DataProc.Host/App.config
+++ b/XCare.DMS.DataProc.Host/App.config
@@ -3,32 +3,74 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <sectionGroup name="common">
+    <!--<sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
-    </sectionGroup>
+    </sectionGroup>-->
     <!--<section name="quartz"
              type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />-->
   </configSections>
 
   <log4net>
-    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="log.txt" />
+    <!-- 错误日志类-->
+    <logger name="ErrorLogger">
+      <level value="ALL" />
+      <appender-ref ref="ErrorAppender" />
+    </logger>
+    <!-- DML消息日志类 -->
+    <logger name="DMLMsgLogger">
+      <level value="ALL" />
+      <appender-ref ref="DMLMsgAppender" />
+    </logger>
+    <!-- 操作日志 -->
+    <logger name="ActivityLog">
+      <level value="ALL" />
+      <appender-ref ref="ActivityLogAppender" />
+    </logger>
+    <!-- 错误日志附加介质-->
+    <appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Log\\Error\\" />
       <param name="AppendToFile" value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <param name="MaxSizeRollBackups" value="100" />
+      <param name="MaxFileSize" value="10240" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="DatePattern" value="yyyyMMdd&quot;.htm&quot;" />
+      <param name="RollingStyle" value="Date" />
+      <!--布局-->
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%-5p%d{yyyy-MM-dd hh:mm:ss} – %m%n" />
+        <param name="ConversionPattern" value="&lt;HR COLOR=red&gt;%n异常时间：%d [%t] &lt;BR&gt;%n异常级别：%-5p &lt;BR&gt;%n异 常 类：%c [%x] &lt;BR&gt;%n%m &lt;BR&gt;%n &lt;HR Size=1&gt;" />
       </layout>
     </appender>
-    <root>
-      <level value="DEBUG" />
-      <appender-ref ref="LogFileAppender" />
-    </root>
+    <!-- DML消息日志附加介质-->
+    <appender name="DMLMsgAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Log\\DMLMsg\\" />
+      <param name="AppendToFile" value="true" />
+      <param name="MaxFileSize" value="10240" />
+      <param name="MaxSizeRollBackups" value="100" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="DatePattern" value="yyyyMMdd&quot;.htm&quot;" />
+      <param name="RollingStyle" value="Date" />
+      <!--布局-->
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="&lt;HR COLOR=blue&gt;%n日志时间：%d [%t] &lt;BR&gt;%n日志级别：%-5p &lt;BR&gt;%n日 志 类：%c [%x] &lt;BR&gt;%n%m &lt;BR&gt;%n &lt;HR Size=1&gt;" />
+      </layout>
+    </appender>
+    <!-- 操作日志日志附加介质-->
+    <appender name="ActivityLogAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Log\\Activity\\" />
+      <param name="AppendToFile" value="true" />
+      <param name="MaxFileSize" value="10240" />
+      <param name="MaxSizeRollBackups" value="100" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="DatePattern" value="yyyyMMdd&quot;.htm&quot;" />
+      <param name="RollingStyle" value="Date" />
+      <!-- 布局-->
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="&lt;HR COLOR=blue&gt;%n日志时间：%d [%t] &lt;BR&gt;%n日志级别：%-5p &lt;BR&gt;%n日 志 类：%c [%x] &lt;BR&gt;%n%m &lt;BR&gt;%n &lt;HR Size=1&gt;" />
+      </layout>
+    </appender>
   </log4net>
 
-  <common>
+  <!--<common>
     <logging>
       <factoryAdapter type="Common.Logging.Log4Net.Universal.Log4NetFactoryAdapter, Common.Logging.Log4Net.Universal">
         <arg key="configType" value="INLINE" />
@@ -36,7 +78,7 @@
         <arg key="level" value="ALL" />
       </factoryAdapter>
     </logging>
-  </common>
+  </common>-->
 
   <!--<quartz>
     <add key="quartz.scheduler.instanceName" value="DaemonQuartzScheduler" />
@@ -53,8 +95,7 @@
   </startup>
 
   <connectionStrings>
-    <add name="XCareConnectionString"
-         connectionString="Data Source=.\SQL2K8R2;Initial Catalog=XCare;Integrated Security = SSPI;Application Name=xcare" />
+    <add name="XCareConnectionString" connectionString="Data Source=.\SQL2K8R2;Initial Catalog=XCare;Integrated Security = SSPI;Application Name=xcare" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
