--- a/XCare.DMS.Uploading/XCare.DMS.Uploading.csproj
+++ b/XCare.DMS.Uploading/XCare.DMS.Uploading.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\YdhlGyzdDao.cs" />
     <Compile Include="Data\YdhlJbbmDao.cs" />
     <Compile Include="Data\YdhlJbxxDao.cs" />
     <Compile Include="Data\YdhlBryzxxDao.cs" />
