--- a/XCare.DMS.Receiving.Api/packages.config
+++ b/XCare.DMS.Receiving.Api/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net461" />
@@ -17,5 +18,8 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.zh-Hans" version="2.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
